refactor: added role in user registration
